<resources>
    <string name="app_name">PhotoMania</string>

    <string name="action_menu">Menu</string>
    <string name="action_timeline">Time-Line</string>
    <string name="action_camera">Câmera</string>
    <string name="action_topdez">Top-Dez</string>
    <string name="btn_cadastrar">CADASTRAR</string>
    <string name="btn_logar">LOGAR</string>
    <string name="lblNome">Nome</string>
    <string name="lblSenha">Senha</string>
    <string name="txtNome">Nome</string>
    <string name="txtSenha">Senha</string>
    <string name="btnLogar">LOGAR</string>
    <string name="lblEmail">Email</string>
    <string name="txtEmail">Email</string>
    <string name="title_activity_login">Login Usuario</string>
    <string name="title_activity_cadastrarUsuario">Novo Usuario</string>
    <string name="title_activity_cadastrarPostagem">Nova Postagem</string>
    <string name="btn_escolhi">Escolhi</string>
    <string name="txt_desc_btn_foto">Que tal nos mostrar quem é você?</string>
    <string name="action_escolher_foto"> </string>
    <string name="action_tirar_foto"></string>
    <string name="txtEmailLogin">Email</string>
    <string name="lblEfeitos">Efeitos</string>
    <string name="lblMoldura">Molduras</string>
    <string name="lblEditores">Editores</string>
    <string name="lblAlgumasDicas">Algumas dicas...</string>
    <string name="descricao_foto">Aqui vem a descrição da foto...</string>
    <string name="btn_postar_foto">Postar a foto</string>

</resources>
