<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff272727">


    <TextView
        android:id="@+id/lblNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="43dp"
        android:text="@string/lblNome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lblNome"
        android:layout_below="@+id/txtNome"
        android:layout_marginTop="30dp"
        android:text="@string/lblEmail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/lblSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="30dp"
        android:text="@string/lblSenha"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff" />

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblNome"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtNome"
        android:textColor="#ffffffff" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblSenha"
        android:layout_alignStart="@+id/txtNome"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/txtEmail"
        android:textColor="#ffffffff" />

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblSenha"
        android:layout_alignStart="@+id/txtEmail"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/txtSenha"
        android:textColor="#ffffffff" />

    <ImageView
        android:id="@+id/imglink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:adjustViewBounds="false"
        android:background="@drawable/icon"
        android:onClick="novaFoto" />

    <Button
        android:id="@+id/bntConcluirFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="#ff000000"
        android:onClick="salvar"
        android:text="@string/btn_escolhi"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/txtDescBtnFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imglink"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/lblSenha"
        android:text="@string/txt_desc_btn_foto"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffffff" />
</RelativeLayout>